unpackaged/main/default/objects/ItemsforEDF__mdt/fields/Done_Condition__c.field-meta.xml
<CustomField>
    <fullName>Done_Condition__c</fullName>
    <description>This field identifies how Done can be marked for the Tile. It can have multiple fields and multiple files combined with " AND "</description>
    <inlineHelpText>For e.g. FIELD:Fellow_Training_Confirmation__c  AND  FILE:Workplan. Possible values for FILE are Workplan, Photo, PhotoReleaseForm, PhotoOnsite, Completed Activities Report, RemainingDeliverables. Supported Field are from CC Engagement object only.</inlineHelpText>
    <label>Done Condition</label>
    <type>TextArea</type>
</CustomField>