unpackaged/main/default/objects/ItemsforEDF__mdt/fields/Due_Date_Field__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Field__c</fullName>
    <description>Allows users to select a field on CC Engagement object to be used as the Due Date</description>
    <inlineHelpText>If your Due Date is relative to a field on CC Engagement, select the field here. If this is set, value in "Due Date" field is ignored.</inlineHelpText>
    <label>Due Date Field</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Date_Engagement_Confirmed__c</fullName>
                <default>true</default>
                <label>Date_Engagement_Confirmed__c</label>
            </value>
            <value>
                <fullName>End_date__c</fullName>
            </value>
            <value>
                <fullName>Start_Date__c</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>