unpackaged/main/default/objects/ItemsforEDF__mdt/fields/Due_Date_Label__c.field-meta.xml
<CustomField>
    <fullName>Due_Date_Label__c</fullName>
    <description>Default label comes from custom label - DeliverablesTracker_Label_DueDate. If you want a different label, mention it here.</description>
    <inlineHelpText>If you want to overwrite default Due Date label, mention it here.</inlineHelpText>
    <label>Due Date Label</label>
    <length>50</length>
    <type>Text</type>
</CustomField>