unpackaged/main/default/objects/ItemsforEDF__mdt/fields/Header_Icon__c.field-meta.xml
<CustomField>
    <fullName>Header_Icon__c</fullName>
    <label>Header Icon</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>utility:play</fullName>
                <default>true</default>
                <label>utility:play</label>
            </value>
            <value>
                <fullName>utility:note</fullName>
            </value>
            <value>
                <fullName>utility:world</fullName>
            </value>
            <value>
                <fullName>utility:date_input</fullName>
            </value>
            <value>
                <fullName>utility:image</fullName>
            </value>
            <value>
                <fullName>utility:info</fullName>
            </value>
            <value>
                <fullName>utility:close</fullName>
            </value>
            <value>
                <fullName>utility:bookmark</fullName>
            </value>
            <value>
                <fullName>utility:calculated_insights</fullName>
            </value>
            <value>
                <fullName>utility:check</fullName>
            </value>
            <value>
                <fullName>utility:checkin</fullName>
            </value>
            <value>
                <fullName>utility:clock</fullName>
            </value>
            <value>
                <fullName>utility:comments</fullName>
            </value>
            <value>
                <fullName>utility:copy</fullName>
            </value>
            <value>
                <fullName>utility:contact</fullName>
            </value>
            <value>
                <fullName>utility:collection</fullName>
            </value>
            <value>
                <fullName>utility:company</fullName>
            </value>
            <value>
                <fullName>utility:groups</fullName>
            </value>
            <value>
                <fullName>utility:key_dates</fullName>
            </value>
            <value>
                <fullName>utility:knowledge_base</fullName>
            </value>
            <value>
                <fullName>utility:listen</fullName>
            </value>
            <value>
                <fullName>utility:metrics</fullName>
            </value>
            <value>
                <fullName>utility:page</fullName>
            </value>
            <value>
                <fullName>utility:send</fullName>
            </value>
            <value>
                <fullName>utility:signature</fullName>
            </value>
            <value>
                <fullName>utility:setup_assistant_guide</fullName>
            </value>
            <value>
                <fullName>utility:socialshare</fullName>
                <label>Utility:socialshare</label>
            </value>
            <value>
                <fullName>utility:pinned</fullName>
                <label>Utility:pinned</label>
            </value>
            <value>
                <fullName>utility:news</fullName>
                <label>Utility:news</label>
            </value>
            <value>
                <fullName>utility:trailblazer_ext</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>