unpackaged/main/default/objects/ItemsforEDF__mdt/fields/Hide_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Hide_Due_Date__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Some dates that are not mandatory, may need to be hidden. This field helps to hide the Due Date on the tile</description>
    <inlineHelpText>Check this checkbox to hide Due Date on the tile.</inlineHelpText>
    <label>Hide Due Date</label>
    <type>Checkbox</type>
</CustomField>