unpackaged/main/default/objects/ItemsforEDF__mdt/fields/Item_Order__c.field-meta.xml
<CustomField>
    <fullName>Item_Order__c</fullName>
    <label>Item Order</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>