unpackaged/main/default/objects/ItemsforEDF__mdt/fields/Mapping_Field__c.field-meta.xml
<CustomField>
    <fullName>Mapping_Field__c</fullName>
    <label>Mapping Field</label>
    <length>100</length>
    <type>Text</type>
</CustomField>