unpackaged/main/default/objects/ItemsforEDF__mdt/fields/Section_Name__c.field-meta.xml
<CustomField>
    <fullName>Section_Name__c</fullName>
    <label>Section Name</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>