unpackaged/main/default/objects/ItemsforEDF__mdt/fields/Tile_Body__c.field-meta.xml
<CustomField>
    <fullName>Tile_Body__c</fullName>
    <label>Tile Body</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>