unpackaged/main/default/objects/ItemsforEDF__mdt/fields/Undo_Done__c.field-meta.xml
<CustomField>
    <fullName>Undo_Done__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Should Done be marked as Not Done is the Done Condition is not met?</description>
    <inlineHelpText>Should Done be marked as Not Done is the Done Condition is not met?</inlineHelpText>
    <label>Undo Done?</label>
    <type>Checkbox</type>
</CustomField>